2000-11-02   Daiki Ueno  <ueno@unixuser.org>

	* sasl-digest.el (sasl-digest-md5-response-1): Rename from
	`sasl-digest-md5-digest-response'.
	(sasl-digest-md5-response-2): New alias.
	(sasl-digest-md5-parse-digest-challenge): Save excursion.

	* sasl.el (sasl-mechanism-alist): Rename from `sasl-mechanisms'.
	(sasl-mechanisms): New variable.
	(sasl-find-authenticator): Check `sasl-mechanisms' rather than
	`sasl-mechanism-alist'.

	* smtp.el (smtp-submit-package): Use `smtp-primitive-ehlo'.
	(smtp-primitive-auth): Check authenticator.

2000-11-02   Daiki Ueno  <ueno@unixuser.org>

	* FLIM-ELS (hmac-modules): New variable.
	(flim-modules): Move HMAC modules to `hmac-modules'
	- Add `sasl-digest'.

	* smtp.el (smtp-sasl-principal-realm): New user option.

	* sasl.el (sasl-plain-response): New function.
	(sasl-mechanisms): Add `DIGEST-MD5' and `PLAIN'.
	(sasl-unique-id-function): New variable.
	(sasl-plain-continuations): New variable.
	(sasl-unique-id): New function.
	(sasl-unique-id-char): New variable.

	* sasl-digest.el: New file.

2000-11-01   Daiki Ueno  <ueno@unixuser.org>

	* smtp.el: Bind `sasl-mechanisms'; add autoload settings for
	`sasl-make-principal', `sasl-find-authenticator',
	`sasl-authenticator-mechanism-internal' and
	`sasl-evaluate-challenge'.
	(smtp-use-sasl): New user option.
	(smtp-sasl-principal-name): New user option.
	(smtp-sasl-mechanisms): New user option.
	(smtp-submit-package): Call `smtp-primitive-starttls' and
	`smtp-primitive-auth'.
	(smtp-primitive-ehlo): Don't modify the rest of a extension line.
	(smtp-primitive-auth): New function.
	(smtp-primitive-starttls): Check the response code.

	* sasl.el: New implementation.

	* sasl-cram.el: New file.

	* FLIM-ELS (flim-modules): Add `md5', `md5-el', `md5-dl',
	`hex-util', `hmac-def', `hmac-md5', `sasl' and `sasl-cram'.

2000-11-01   Daiki Ueno  <ueno@unixuser.org>

	* smtp.el: Add autoload settings for `starttls-open-stream' and
	`starttls-negotiate'.