@@ -1,5 +1,10 @@
 2000-11-02   Daiki Ueno  <ueno@unixuser.org>
 
+	* sasl.el (sasl-make-authenticator): Allocate a freshly generated
+	symbol for each continuation.
+
+2000-11-02   Daiki Ueno  <ueno@unixuser.org>
+
 	* sasl-digest.el (sasl-digest-md5-response-1): Rename from
 	`sasl-digest-md5-digest-response'.
 	(sasl-digest-md5-response-2): New alias.
